--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,9 +8,9 @@
   <body>
     <header>
       <div class="container">
-        <nav>
+        <a href="/">
           <img src="#" alt="FDesign" />
-        </nav>
+        </a>
         <div>
           <h1>Дизайн чего угодно за 3 дня</h1>
           <p>
@@ -145,13 +145,11 @@
     </main>
     <footer>
       <div class="container">
-        <ul>
-          <li>Мы любим дизайн</li>
-          <li>
-            <img src="#" alt="FDesign" />
-          </li>
-          <li>&copy; Все права защищены</li>
-        </ul>
+        <div>
+          <p>Мы любим дизайн</p>
+          <img src="#" alt="FDesign" />
+          <p>&copy; Все права защищены</p>
+        </div>
       </div>
     </footer>
   </body>
