--- a/index.html
+++ b/index.html
@@ -4,138 +4,128 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FDesign</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300&display=swap&subset=cyrillic" rel="stylesheet" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <div class="container">
         <a href="/">
-          <img src="#" alt="FDesign" />
+          <img src="./img/logo.png" class="logo" alt="FDesign" />
         </a>
-        <div>
+        <div class="offer">
           <h1>Дизайн чего угодно за 3 дня</h1>
-          <p>
+          <p class="description">
             Lorem ipsum dolor sit amet,
-            <strong>consectetur adipisicing</strong> elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua. Ut enim ad mini
+            <strong>consectetur adipisicing</strong> elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+            mini
           </p>
-          <div>
-            <a href="#">Заказать дизайн</a>
-            <a href="#">Узнать больше</a>
+          <div class="btn-box">
+            <a href="#" class="btn">Заказать дизайн</a>
+            <a href="#" class="btn btn-right">Узнать больше</a>
           </div>
         </div>
       </div>
     </header>
     <main>
-      <section>
+      <section class="services">
         <div class="container">
-          <h2>Наши услуги</h2>
-          <ul>
-            <li>
-              <img src="#" alt="icon1" />
-              <h3>Веб-Дизайн</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                eiusmod tempor incididunt ut labore et dolor set
+          <h2 class="title">Наши услуги</h2>
+          <ul class="services-box">
+            <li class="services-box-item">
+              <img src="./img/icon1.png" width="67" alt="icon1" />
+              <h3 class="subtitle">Веб-Дизайн</h3>
+              <p class="descripton-item-box">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolor set
               </p>
             </li>
-            <li>
-              <img src="#" alt="icon2" />
-              <h3>Иллюстрации</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                eiusmod tempor incididunt ut labore et dolor set
+            <li class="services-box-item">
+              <img src="./img/icon2.png" width="62" alt="icon2" />
+              <h3 class="subtitle">Иллюстрации</h3>
+              <p class="descripton-item-box">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolor set
               </p>
             </li>
-            <li>
-              <img src="#" alt="icon3" />
-              <h3>3D-Моделирование</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                eiusmod tempor incididunt ut labore et dolor set
+            <li class="services-box-item">
+              <img src="./img/icon3.png" width="66" alt="icon3" />
+              <h3 class="subtitle">3D-Моделирование</h3>
+              <p class="descripton-item-box">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolor set
               </p>
             </li>
-            <li>
-              <img src="#" alt="icon4" />
-              <h3>Веб-Дизайн</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                eiusmod tempor incididunt ut labore et dolor set
+            <li class="services-box-item">
+              <img src="./img/icon1.png" width="67" alt="icon1" />
+              <h3 class="subtitle">Веб-Дизайн</h3>
+              <p class="descripton-item-box">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolor set
               </p>
             </li>
-            <li>
-              <img src="#" alt="icon5" />
-              <h3>Иллюстрации</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                eiusmod tempor incididunt ut labore et dolor set
+            <li class="services-box-item">
+              <img src="./img/icon2.png" width="62" alt="icon2" />
+              <h3 class="subtitle">Иллюстрации</h3>
+              <p class="descripton-item-box">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolor set
               </p>
             </li>
-            <li>
-              <img src="#" alt="icon6" />
-              <h3>3D-Моделирование</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                eiusmod tempor incididunt ut labore et dolor set
+            <li class="services-box-item">
+              <img src="./img/icon3.png" width="66" alt="icon3" />
+              <h3 class="subtitle">3D-Моделирование</h3>
+              <p class="descripton-item-box">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolor set
               </p>
             </li>
           </ul>
-          <a href="www.facebook.com/iam">www.facebook.com/iam</a>
+          <a href="facebook.com/iam" class="services-link">www.facebook.com/iam</a>
         </div>
       </section>
-      <section>
+      <section class="advantages">
         <div class="container">
-          <h2>Преимущества работы с нами</h2>
-          <div>
-            <ul>
-              <li>
-                <span>01</span>
-                <h3>Пунктуальность</h3>
+          <h2 class="title-advantages">Преимущества работы с нами</h2>
+          <div class="advantages-box">
+            <ul class="lefr-list">
+              <li class="advantages-box-item">
+                <span class="number">01</span>
+                <h3 class="subtitle">Пунктуальность</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                  do eiusmod
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                 </p>
               </li>
-              <li>
-                <span>02</span>
-                <h3>Отзывчивость</h3>
+              <li class="advantages-box-item">
+                <span class="number">02</span>
+                <h3 class="subtitle">Отзывчивость</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                  do eiusmod
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                 </p>
               </li>
-              <li>
-                <span>03</span>
-                <h3>Порядочность</h3>
+              <li class="advantages-box-item">
+                <span class="number">03</span>
+                <h3 class="subtitle">Порядочность</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                  do eiusmod
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                 </p>
               </li>
             </ul>
-            <img src="#" alt="telephon" />
-            <ul>
-              <li>
-                <span>04</span>
-                <h3>Верность делу</h3>
+            <img src="./img/iphone.png" alt="telephon" />
+            <ul class="right-list">
+              <li class="advantages-box-item">
+                <span class="number">04</span>
+                <h3 class="subtitle">Верность делу</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                  do eiusmod
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                 </p>
               </li>
-              <li>
-                <span>05</span>
-                <h3>Преданность королю</h3>
+              <li class="advantages-box-item">
+                <span class="number">05</span>
+                <h3 class="subtitle">Преданность королю</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                  do eiusmod
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                 </p>
               </li>
-              <li>
-                <span>06</span>
-                <h3>Любовь к верстке</h3>
+              <li class="advantages-box-item">
+                <span class="number">06</span>
+                <h3 class="subtitle">Любовь к верстке</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                  do eiusmod
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                 </p>
               </li>
             </ul>
@@ -143,12 +133,12 @@
         </div>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <div class="container">
-        <div>
-          <p>Мы любим дизайн</p>
-          <img src="#" alt="FDesign" />
-          <p>&copy; Все права защищены</p>
+        <div class="footer-box">
+          <p class="footer-description">Мы любим дизайн</p>
+          <img src="./img/logo.png" alt="FDesign" />
+          <p class="copy">&copy; Все права защищены</p>
         </div>
       </div>
     </footer>
